Fixes to visibility overlay

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -61,12 +61,6 @@
     backdrop-filter: blur(2rem);
 }
 
-.text-shadow {
-    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06);
-}
-.text-shadow-sm {
-    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-}
-.text-shadow-md {
-    text-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 2px 4px rgba(0, 0, 0, 0.06);
+.drop-shadow {
+    filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
 }
